skiplang/compiler/invalid_tests/typechecking/native_method_no_binding.sk
class C{} {
  native fun bare(): Int;
}

fun main(): void {
  print_string("x=" + C{}.bare())
}
